styles.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  height: 100vh;
  background: url(/assets/bg_img.png) center / cover no-repeat;

}

.navbar{
  display: flex;
  align-items: center;
  position: relative;
  padding: 15px 20px;
}

h1 {
  display: inline-block;
  font-family: "Cinzel", serif; 
  font-size: 3rem;
  font-weight: 700;
  text-align: center;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);

  color: #d4af37;


/* Golden glow */
text-shadow: 
  0 0 5px rgba(255, 255, 200, 0.8),
  0 0 10px #f6e27a,
  0 0 20px #d4af37,
  0 0 40px #a67c00;

/* subtle pulse */
animation: gold-glow 2s infinite alternate;
}

@keyframes gold-glow {
  from {
    opacity: 0.85;
    text-shadow:
      0 0 5px rgba(255, 255, 200, 0.6),
      0 0 10px #d4af37,
      0 0 20px #a67c00;
  }

  to {
    opacity: 1;
    text-shadow:
      0 0 10px rgba(255, 255, 220, 0.9),
      0 0 25px #f6e27a,
      0 0 50px #b8860b;
  }
}
    

 #soundBtn{
    color: #ffff;
    background: none;
    border: none;
    outline: none;
    font-size: 30px;
    margin-left: auto;
    transition: transform 0.5s;
  }

  #soundBtn:hover{
       transform: scale(1.2);
  }


.library {
  width: min(85vw, 1200px);
  height: 100%;
  margin: 0 auto;

  display: flex;
  flex-direction: column;

  padding-top: 60px;
  gap: 60px;
}


.shelf-container {
  width: 100%;
  height: 160px;
  position: relative;
}


.books-row {
  display: flex;
  flex-wrap: wrap;
  gap:92px 15px;

  position: absolute;
  bottom: 27px; 

  width: 100%;
  height: 120px;

  align-items: flex-end;
}


.book {
  font-family: "Merriweather", serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 35px;
  height: 120px;
  flex-shrink: 0;
  border-radius: 3px;
  box-shadow:
        inset -2px 0 4px rgba(0, 0, 0, 0.4),
        inset 2px 0 4px rgba(255, 255, 255, 0.05);
   transition: transform 0.5s;
   cursor: pointer;
}

.book .title{
    font-size: 14px;
    font-weight: 500;
    padding: 1.5px;
    margin-bottom: auto;
    font-size: inherit;
    writing-mode: vertical-lr;
    
}

.book .bar{
    display: block;
    width: 100%;
    height: 1px;
    padding: 0;
    border: 0;
    background-color: #d4af37;
}

.book .author{
    font-weight: 700;
    padding: 2px 4px;
}

.book:hover{
  transform: scale(1.2);
}


.shelf {
  position: absolute;
  bottom: 0;

  width: 100%;
  height: 27px;

  background: url(/assets/wood.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  border-radius: 4px;

  box-shadow:
    inset 0 -8px 10px rgba(0, 0, 0, 0.6);
}

#addBtn{
  color: #ffff;
  background: none;
  position: fixed;
  border: none;
  font-family: "Cinzel", serif;
  font-size: 30px;
  outline: none;
  bottom: 10%;
  right: 5%;
  transition: transform 0.5s;
  
}

#addBtn img{
    width:50px;
    height: 50px;
   
    
}

#addBtn:hover{
  transform: scale(1.2);
}

